apps/base/clickhouse/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickhouse
  namespace: clickhouse
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - clickhouse.amajor.cloud
      secretName: clickhouse-tls
  rules:
    - host: clickhouse.amajor.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clickhouse-client
                port:
                  number: 8123
